# mckismetlab-launcher

./: .gitignore  Cargo.toml  README.md  build.js  crowdin.yml  electron-builder.js  index.html  package-lock.json  package.json  tsconfig.json  webpack.electron.config.js  webpack.renderer.base.config.js  webpack.renderer.dev.config.js  webpack.renderer.prod.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: -----.md  -----bug-.md  bug.md  enhancement.md  proposed-new-features.md  report-error--bug-.md  report-error.md
.github/workflows/: build.yml
namelessrealms_core/: Cargo.toml
namelessrealms_core/src/: config.rs  download.rs  error.rs  global_path.rs  lib.rs  logger.rs  main.rs  parameters.rs  process.rs  utils.rs
namelessrealms_core/src/api/: metadata.rs  mod.rs  reqwest_api.rs
namelessrealms_core/src/instance/: children.rs  mod.rs  process.rs
namelessrealms_core/src/minecraft/: arguments.rs  assets.rs  libraries.rs  mod.rs  parameters.rs  vanilla_download.rs  version_metadata.rs
namelessrealms_core/src/minecraft/loader/: loader.rs  loader_download.rs  mod.rs
namelessrealms_core/src/minecraft/loader/forge/: forge_installer.rs  mod.rs
namelessrealms_core/src/minecraft/modloader/: mod.rs  modloader.rs  modloader_metadata.rs
namelessrealms_core/src/minecraft/modloader/forge/: forge_handler.rs  mod.rs
namelessrealms_core/src/process/: mod.rs
namelessrealms_core/src/store/: instances.rs  launcher.rs  mod.rs  store.rs
namelessrealms_core/src/util/: config.rs  download.rs  error.rs  global_path.rs  io.rs  mod.rs  utils.rs
namelessrealms_gui/: index.html  package.json
namelessrealms_gui/src/: styles.scss
namelessrealms_gui/src-tauri/: Cargo.toml
namelessrealms_gui/src-tauri/src/: main.rs
src/: i18n.ts  index.html  main.tsx  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.scss  App.tsx  ViewManager.tsx
src/interfaces/: IClassifiersLib.ts  IGameLibraries.ts  ILauncherSettings.ts  IModLoaders.ts  IModule.ts  IModuleHandlerReturn.ts  IMojangAccountAuth.ts  IMojangAssetsReturn.ts  IMojangLib.ts  IMojangLibRules.ts  IMojangTokenRefresh.ts  (+4 more)
(+323 files in other folders)
