[package]
name = "namelessrealms_core"
version = "0.5.0"
edition = "2021"
authors = ["Yu"]

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.9"
zip = "0.6.6"
toml = "0.8.1"