[package]
name = "namelessrealms_core"
version = "0.5.0"
edition = "2021"
authors = ["Yu"]

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.9"
zip = "0.6.6"
toml = "0.8.1"
home = "0.5.5"
sha1 = "0.10.5"
os_info = { version = "3", default-features = false }
chrono = { version = "0.4.19", features = ["serde"] }
sysinfo = "0.29.9"
keytar = "0.1.6"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing-appender = "0.2.2"

thiserror = "1.0.50"