[package]
name = "namelessrealms_gui"
version = "0.5.0"
description = "A Tauri App"
authors = ["Yu"]
license = ""
repository = ""
edition = "2021"
default-run = "namelessrealms_gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
namelessrealms_core = { path = "../../namelessrealms_core", version = "0.5.0" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
